<resources>
    <string name="app_name">SKATE FORCE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3_drawer">SKATE FORCE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <string name="registrate">¿Aún no estás registrado? Pincha aquí</string>
    <string name="Log">Log In</string>
    <string name="password">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="name">Nombre</string>
    <string name="app">SKATE FORCE</string>
    <string name="registrarse">Regístrate</string>


    <string-array name="nivel">
        <item>Amateur</item>
        <item>Skater</item>
        <item>Tony Hawk</item>
    </string-array>


    <string-array name="textoSpot">
        <item>SpotVillalba</item>
        <item>SpotGalapagar</item>
        <item>SpotElEscorial</item>
        <item>SpotLasRozas</item>
        <item>SpotCercedilla</item>
        <item>SpotLasZorreras</item>
    </string-array>

    <string-array name="dificultadSpot">
        <item>Baja</item>
        <item>Media</item>
        <item>Baja</item>
        <item>Alta</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

    <integer-array name="fotos">
        <item>@drawable/villalba</item>
        <item>@drawable/galapagar</item>
        <item>@drawable/escorial</item>
        <item>@drawable/rozas</item>
        <item>@drawable/cercedilla</item>
        <item>@drawable/zorreras</item>
    </integer-array>





    <string name="agregar_spot">Agregar Spot</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="nombre_del_spot">NOMBRE DEL SPOT</string>
    <string name="content">CONTENIDO DEL SKATE PARK</string>
    <string name="dificultad">DIFICULTAD</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baja">Baja</string>
    <string name="galeria">Galeria</string>
    <string name="camara">camara</string>
    <string name="skatepark">Skatepark</string>
    <string name="street">Street</string>
    <string name="escalera">Escalera</string>
    <string name="barandilla">Barandilla</string>
    <string name="banco">Banco</string>
    <string name="cajon">Cajon</string>
    <string name="rampa">Rampa</string>
    <string name="bowl">Bowl</string>
    <string name="tipo_de_spot">TIPO DE SPOT</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="tipo_de_spot_1">Tipo de Spot:</string>
    <string name="dificultad_del_spot">Dificultad del spot</string>
    <string name="dificultad_spot">Dificultad</string>
    <string name="tipo">Tipo</string>
    <string name="crampa">CRampa</string>
    <string name="cescalera">CEscalera</string>
    <string name="ccajon">CCajon</string>
    <string name="cbarandilla">CBarandilla</string>
    <string name="cbowl">CBowl</string>
    <string name="cbanco">CBanco</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n">Descripción</string>
    <string name="componentes">COMPONENTES</string>
    <string name="dificultaddd">DIFICULTAD</string>
    <string name="skater_en_mis_tiempos_libres_mejor_que_t_seguro">Skater en mis tiempos libres. Mejor que tú, seguro.</string>
    <string name="comenzar_viaje">Comenzar viaje</string>
</resources>
